Modules/Nexus-project/ec2/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_key_pair" "deployer" {
  key_name   = "ubuntu-key"
  public_key = file("~/.ssh/id_rsa.pub")
}

resource "aws_instance" "web" {
  ami = data.aws_ami.ubuntu.id
  key_name = aws_key_pair.deployer.key_name
  instance_type = var.instance_type
  vpc_security_group_ids = [var.sg_id]
  subnet_id = var.subnet_id
  
  tags = local.common_tags
}
